logout & change-password working stage